<resources>
    <string name="app_name">Mobilab Fitness</string>
    <string name="all_day_tracking">All Day Tracking</string>
    <string name="workout_tracking">Workout Tracking</string>
    <string name="manual_entry">Manual Entry</string>
    <string name="progress">User\'s Progress\nWill Go Here</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="title_activity_registration">Create Account</string>
    <string name="registerButton">Register</string>
    <string name="register">Register</string>
    <string name="stop">Stop</string>
    <string name="Reset">Reset</string>


    <!--SPINNER Gender-->
    <string name="select_one">Select</string>
    <string name="gender_unknown">Unknown</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>

    <!--Spinner Functional Level-->
    <string name="quad">Quadriplegic</string>
    <string name="high">High Paraplegic</string>
    <string name="low">Low Paraplegic</string>

    <string name="one">1: Description Here</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_history">History</string>
    <string name="log_workout">Log Workout</string>
    <string name="title">Title</string>
    <string name="descriptive_workout_title">Descriptive workout title</string>
    <string name="date">Date</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="select_date">SELECT DATE</string>
    <string name="duration">Duration</string>
    <string name="hours">hours</string>
    <string name="hrs">hrs</string>
    <string name="minutes">minutes</string>
    <string name="min">min</string>
    <string name="distance">Distance</string>
    <string name="km">km</string>
    <string name="calories">Calories</string>
    <string name="cal">Cal</string>
    <string name="type">Type</string>
    <string name="energy_expenditure">Energy Expenditure</string>
    <string name="save_workout">Save Workout</string>
    <string name="profile">Profile</string>
    <string name="extra">Extra</string>
    <string name="view_progress">View Progress</string>
    <string name="view_users">View Users</string>
</resources>
