<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/TextViewCurrentUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:padding="16dp"
        tools:text="@string/progress"
        android:visibility="gone"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/buttonSaveWorkout"
        style="@style/AppTheme.Button.accent"
        android:layout_width="181dp"

        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="logWorkout"
        android:text="@string/log_workout"
        app:layout_constraintEnd_toStartOf="@+id/buttonRegister"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewCurrentUser" />

    <Button
        android:id="@+id/buttonProfile"
        style="@style/AppTheme.Button.accent"
        android:layout_width="182dp"

        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:onClick="profile"
        android:text="@string/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonViewProgress" />


    <Button
        android:id="@+id/buttonPopulate"
        style="@style/AppTheme.Button.primaryDark"

        android:onClick="Populate"

        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"

        android:layout_marginRight="16dp"
        android:text="Populate Database"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/buttonProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonProfile"
        app:layout_constraintTop_toTopOf="@+id/buttonProfile">

    </Button>


    <Button
        android:id="@+id/buttonRegister"
        style="@style/AppTheme.Button.primaryDark"
        android:layout_width="0dp"


        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="register"
        android:text="@string/registerButton"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSaveWorkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonSaveWorkout"
        app:layout_constraintTop_toTopOf="@+id/buttonSaveWorkout"
        app:layout_constraintVertical_bias="1.0">

    </Button>

    <Button
        android:id="@+id/buttonViewProgress"
        style="@style/AppTheme.Button.primaryDark"
        android:layout_width="182dp"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"

        android:layout_marginTop="16dp"
        android:onClick="history"
        android:text="@string/view_progress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSaveWorkout" />

    <Button
        android:id="@+id/buttonUserList"
        style="@style/AppTheme.Button.accent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="userList"
        android:text="@string/view_users"

        app:layout_constraintBottom_toBottomOf="@id/buttonViewProgress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonViewProgress"
        app:layout_constraintTop_toTopOf="@id/buttonViewProgress" />


    <Button
        android:id="@+id/imageView6"
        style="@style/AppTheme.Button.primary"
        android:layout_width="0dp"

        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonProfile" />

    <Button
        android:id="@+id/imageView7"
        style="@style/AppTheme.Button.accent"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <Space
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView7" />

</android.support.constraint.ConstraintLayout>